--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,6 @@
 {
   "name": "r4l_drivers",
+  "mounts": ["source=/Users/zilu/.ssh,target=/root/.ssh,type=bind"],
   "build": {
     "context": "${localWorkspaceFolder}",
     "dockerfile": "${localWorkspaceFolder}/.devcontainer/Dockerfile",
@@ -12,17 +13,13 @@
       "password": "r4l_drivers"
     }
   },
-  "forwardPorts": [
-    6080
-  ],
+  "forwardPorts": [6080],
   "portsAttributes": {
     "6080": {
       "label": "desktop"
     }
   },
-  "runArgs": [
-    "--privileged"
-  ],
+  "runArgs": ["--privileged"],
   "postCreateCommand": ".devcontainer/postCreateCommand.sh",
   "customizations": {
     "vscode": {
