update some docker & makefile config
主要就是在 makefile 里面加入了多线程编译、镜像扩容，在 dockerfile 之中加入了 clangd 的安装

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,7 +26,12 @@
       "extensions": [
         "rust-lang.rust-analyzer",
         "ms-vscode.cpptools",
-        "tamasfe.even-better-toml"
+        "tamasfe.even-better-toml",
+        "vscodevim.vim",
+        "esbenp.prettier-vscode",
+        "ms-vscode.makefile-tools",
+        "ms-azuretools.vscode-docker",
+        "llvm-vs-code-extensions.vscode-clangd"
       ]
     }
   }
