fix vscode config
(cherry picked from commit d91150623f6a2992461d912b4489ff68e6cb776d)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
   "clangd.arguments": [
-    "--compile-commands-dir=${workspaceFolder}/linux_raspberrypi/compile_commands.json",
+    "--compile-commands-dir=${workspaceFolder}/linux_raspberrypi",
     "--background-index",
-    "--completion-style=detailed"
+    "--completion-style=detailed",
+    "--header-insertion=never",
+    "--log=verbose"
   ],
   "rust-analyzer.linkedProjects": [
     "${workspaceFolder}/linux_raspberrypi/build_4b/rust-project.json"
